--- a/index.html
+++ b/index.html
@@ -14,47 +14,98 @@
 
         header {
             text-align: center;
-            padding: 40px 20px;
-            background-color: #007bff;
+            padding: 60px 20px;
             color: white;
+            background-image: url('image.png'); /* Path to your PNG file */
+            background-size: cover;
+            background-position: center;
+            height: 300px;  /* Set a height for the header */
         }
 
         header img {
             border-radius: 50%;
             width: 150px;
             height: 150px;
+            margin-bottom: 20px;
+        }
+
+        header h1 {
+            font-size: 3em;
+            margin: 0;
+        }
+
+        header p {
+            font-size: 1.2em;
+            margin: 10px 0;
         }
 
         .buttons {
             text-align: center;
-            padding: 20px;
+            padding: 40px 20px;
         }
 
         .buttons a {
-            display: inline-block;
-            margin: 10px;
-            padding: 15px;
+            display: block;
+            margin: 15px;
+            padding: 20px;
             background-color: #007bff;
             color: white;
             text-decoration: none;
             border-radius: 8px;
-            width: 200px;
-            text-align: center;
+            width: 250px;
+            font-size: 1.2em;
+            margin-left: auto;
+            margin-right: auto;
+            transition: background-color 0.3s;
         }
 
-        .projects, .about-me {
-            padding: 20px;
-            text-align: center;
+        .buttons a:hover {
+            background-color: #0056b3;
         }
 
-        .projects .project-button {
-            display: inline-block;
-            margin: 10px;
-            padding: 20px;
+        .projects {
+            padding: 40px 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+            width: 60%;
+            margin: 0 auto;
+        }
+
+        .project-box {
+            position: relative;
             background-color: #28a745;
             color: white;
-            text-decoration: none;
             border-radius: 8px;
+            width: 30%;
+            height: 0;
+            padding-bottom: 30%;  /* Maintain square shape */
+            margin: 10px;
+            text-align: center;
+            box-sizing: border-box;
+            overflow: hidden;
+        }
+
+        .project-box a {
+            display: block;
+            height: 100%;
+            width: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+
+        .project-box img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;  /* Ensures the image covers the square without distortion */
+            cursor: pointer;
+        }
+
+        .about-me {
+            padding: 20px;
+            text-align: center;
         }
 
         .about-me .blurb {
@@ -86,9 +137,14 @@
         }
 
         @media (max-width: 768px) {
-            .projects .project-button {
+            .projects {
+                flex-direction: column;
                 width: 100%;
-                margin: 5px 0;
+            }
+
+            .project-box {
+                width: 80%;
+                margin: 10px auto;
             }
         }
     </style>
@@ -96,25 +152,32 @@
 <body>
 
 <header>
-    <img src="your-image.jpg" alt="Your Name">
+    <img src="image.png" alt="Your Name"> <!-- Replace with your header image -->
     <h1>Welcome to My Personal Website!</h1>
     <p>Catchy slogan or greeting here.</p>
 </header>
 
 <div class="buttons">
-    <a href="https://portfolio.com" target="_blank">Portfolio</a>
-    <a href="https://github.com/username" target="_blank">GitHub</a>
-    <a href="https://linkedin.com/in/username" target="_blank">LinkedIn</a>
-    <a href="https://yourblog.com" target="_blank">Blog</a>
-    <a href="https://instagram.com/professional_instagram" target="_blank">Instagram</a>
-    <a href="https://anotherlink.com" target="_blank">Other Link</a>
+    <a href="https://github.com/K3nn8DN" target="_blank">GitHub</a>
+    <a href="https://www.linkedin.com/in/kaestrange/" target="_blank">LinkedIn</a>
 </div>
 
 <div class="projects">
-    <h2>Top 3 Projects</h2>
-    <a href="project1-link.html" class="project-button">Project 1</a>
-    <a href="project2-link.html" class="project-button">Project 2</a>
-    <a href="project3-link.html" class="project-button">Project 3</a>
+    <div class="project-box">
+        <a href="project1-link.html">
+            <img src="image.png" alt="Project 1"> <!-- Replace with your project image -->
+        </a>
+    </div>
+    <div class="project-box">
+        <a href="project2-link.html">
+            <img src="image.png" alt="Project 2"> <!-- Replace with your project image -->
+        </a>
+    </div>
+    <div class="project-box">
+        <a href="project3-link.html">
+            <img src="image.png" alt="Project 3"> <!-- Replace with your project image -->
+        </a>
+    </div>
 </div>
 
 <div class="about-me">
