--- a/index.html
+++ b/index.html
@@ -66,12 +66,11 @@
 
         /* Interests Section */
         .interests {
-            padding: 40px 20px;
+            padding: 40px 0;
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
-            flex-wrap: wrap;
-            width: 60%;
+            width: 100%;
             margin: 0 auto;
         }
 
@@ -80,10 +79,10 @@
             background-color: #28a745;
             color: white;
             border-radius: 8px;
-            width: 30%;
+            width: 20%;
             height: 0;
-            padding-bottom: 30%;  /* Maintain square shape */
-            margin: 10px;
+            padding-bottom: 20%;  /* Maintain square shape */
+            margin: 0.3%;
             text-align: center;
             box-sizing: border-box;
             overflow: hidden;
@@ -198,52 +197,28 @@
             background-color: #0056b3;
         }
 
-	
-	/*about me section*/
-        .about-me {
+
+
+        footer {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
             padding: 20px;
-            text-align: center;
-        }
-
-        .about-me .blurb {
-            background-color: #ffffff;
-            padding: 15px;
-            border-radius: 8px;
-            margin: 10px auto;
-            width: 80%;
-            max-width: 600px;
-            text-align: left;
-        }
-
-        .about-me .more-info {
-            display: none;
-            padding-top: 10px;
-        }
-
-        .about-me button {
-            background-color: #007bff;
+            background-color: #333;
             color: white;
-            border: none;
-            padding: 10px 15px;
-            border-radius: 8px;
-            cursor: pointer;
         }
 
-        .about-me button:hover {
-            background-color: #0056b3;
+        .links a {
+            color: white;
+            text-decoration: none;
+            margin-right: 15px;
+            font-size: 1.1em;
         }
 
-        @media (max-width: 768px) {
-            .interests {
-                flex-direction: column;
-                width: 100%;
-            }
-
-            .interest-box {
-                width: 80%;
-                margin: 10px auto;
-            }
+        .links a:hover {
+            text-decoration: underline;
         }
+
     </style>
 </head>
 <body>
@@ -307,36 +282,23 @@
     </div>
 </div>
 
-
-
-<div class="about-me" id="about-me">
-    <h2>About Me</h2>
-    <div class="blurb">
-        <p>
-            Hi! I'm [Your Name], a passionate [your profession/field]. Here's a little bit about me and my work.<br>
-            <span class="initial-info">I love working on innovative projects and collaborating with creative minds.</span>
-            <span class="more-info">
-                In my free time, I enjoy [hobbies/interests], and I'm always looking to learn new things and take on exciting challenges.
-            </span>
-        </p>
-        <button onclick="toggleAboutMe()">Show More</button>
+<!-- Footer Section -->
+<footer>
+    <div class="left-section">
+	<span> Kae.strange@tutanota.com</span>
     </div>
-</div>
 
-<script>
-    function toggleAboutMe() {
-        const moreInfo = document.querySelector('.about-me .more-info');
-        const button = document.querySelector('.about-me button');
-        
-        if (moreInfo.style.display === 'none' || moreInfo.style.display === '') {
-            moreInfo.style.display = 'block';
-            button.textContent = 'Show Less';
-        } else {
-            moreInfo.style.display = 'none';
-            button.textContent = 'Show More';
-        }
-    }
-</script>
+    <div class="right-section">
+        <div class="links">
+	    <a href="https://www.linkedin.com" target="_blank">Portfolio</a>
+            <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
+            <a href="https://github.com" target="_blank">GitHub</a>
+            <a href="resume.pdf" target="_blank">Resume</a>
+            <a href="#about-me">About Me</a>
+        </div>
+    </div>
+</footer>
+
 
 </body>
 </html>
