--- a/index.html
+++ b/index.html
@@ -197,7 +197,32 @@
             background-color: #0056b3;
         }
 
-
+	/*News Section*/
+        .news-container {
+            display: flex;
+            gap: 20px;
+	    width:100%;
+            justify-content: center;
+            margin-top: 20px;
+	    padding-bottom: 30px;
+        }
+        .news-box {
+            width: 30%;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            overflow: hidden;
+            text-align: center;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        .news-box img {
+            width: 100%;
+            height: 70%;
+            object-fit: cover;
+        }
+        .news-box .news-text {
+            padding: 10px;
+            font-size: 14px;
+        }
 
         footer {
             display: flex;
@@ -281,6 +306,17 @@
 	
     </div>
 </div>
+
+<div class="news-container">
+        <div class="news-box">
+            <img src="image.png" alt="News Image">
+            <div class="news-text">This is the first news item.</div>
+        </div>
+        <div class="news-box">
+            <img src="image.png" alt="News Image">
+            <div class="news-text">This is the second news item.</div>
+        </div>
+    </div>
 
 <!-- Footer Section -->
 <footer>
