--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 <nav>
     <div class="website-name" style="font-size: 2em;">Your Website</div> <!-- Larger website name -->
     <div class="nav-links">
-        <a href="#interests">Interests</a>
+        <a href="#interests">Portfolio</a>
         <a href="#about-me">About Me</a>
     </div>
 </nav>
