--- a/index.html
+++ b/index.html
@@ -62,6 +62,20 @@
             font-size: 1.5em;
             margin: 10px 0;
         }
+	
+	header button {
+            background-color: #007bff;
+            color: white;
+            border: none;
+            padding: 10px 15px;
+            border-radius: 8px;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+
+	header button:hover {
+            background-color: #0056b3;
+        }
 
 
         /* Interests Section */
@@ -261,6 +275,8 @@
     <img src="image.png" alt="Your Name"> <!-- Replace with your header image -->
     <h1>Welcome to My Personal Website!</h1>
     <p>Catchy slogan or greeting here.</p>
+    <button>Link</button>
+
 </header>
 
 <div class="interests" id="interests">
