add photos and links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website</title>
+    <title>Kae Strange Website</title>
     <style>
         /* Basic Styles */
         body {
@@ -39,12 +39,13 @@
         /* Header */
         header {
             text-align: center;
-            padding: 90px 20px; /* Adjusted to 3/4th of the previous height */
+            
             color: white;
-            background-image: url('image.png'); /* Replace with your header image */
+	    padding:0;
+            background-image: url('images/header.png'); 
             background-size: cover;
             background-position: center;
-            height: 450px;  /* 3/4th the previous height of 600px */
+            height: 650px;  /* 3/4th the previous height of 600px */
         }
 
         header img {
@@ -265,18 +266,21 @@
 
 <!-- Navigation Bar -->
 <nav>
-    <div class="website-name" style="font-size: 2em;">Your Website</div> <!-- Larger website name -->
+    <div class="website-name" style="font-size: 2em;">Kae Website</div> 
     <div class="nav-links">
-        <a href="#interests">Portfolio</a>
-        <a href="#about-me">About Me</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="aboutMe.html">About Me</a>
     </div>
 </nav>
 
 <header>
-    <img src="image.png" alt="Your Name"> <!-- Replace with your header image -->
-    <h1>Welcome to My Personal Website!</h1>
-    <p>Catchy slogan or greeting here.</p>
-    <button>Link</button>
+    <img src="image.png" alt="Kae Strange"> 
+    <h1>Welcome!</h1>
+    <p>Glade you stopped by</p>
+    <a href="aboutMe.html">
+    <button>My GitHub</button>
+    </a>
+   
 
 </header>
 
@@ -302,8 +306,8 @@
 <div class="portfolio" id="portfolio">
     <div class="portfolio-item">
         <div class="description">
-            <h2>Project 1</h2>
-            <p>Here’s a brief description of my project. This project involves web development and showcases some interesting features.</p>
+            <h2>Color Radius</h2>
+            <p>Color Radius is single player strategy game, if you cant win at chess and tic tac toe's too easy try the fun for all ages Color Radius</p>
             <button>View Project</button>
         </div>
         <div class="image">
@@ -327,11 +331,17 @@
 <div class="news-container">
         <div class="news-box">
             <img src="image.png" alt="News Image">
-            <div class="news-text">This is the first news item.</div>
+            <div class="news-text">
+		<h1>Current Project News:</h1>
+		<p>Im currently working on a Spring Database<p1>
+	    </div>
         </div>
         <div class="news-box">
             <img src="image.png" alt="News Image">
-            <div class="news-text">This is the second news item.</div>
+            <div class="news-text">
+		<h1>Latest Update:</h1>
+		<p>Website coming Soon as you may see</p>
+	    </div>
         </div>
     </div>
 
@@ -343,11 +353,11 @@
 
     <div class="right-section">
         <div class="links">
-	    <a href="https://www.linkedin.com" target="_blank">Portfolio</a>
-            <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
-            <a href="https://github.com" target="_blank">GitHub</a>
-            <a href="resume.pdf" target="_blank">Resume</a>
-            <a href="#about-me">About Me</a>
+	    <a href="portfolio.html" target="_blank">Portfolio</a>
+            <a href="www.linkedin.com/in/kaestrange" target="_blank">LinkedIn</a>
+            <a href="https://github.com/K3nn8DN" target="_blank">GitHub</a>
+            <a href="images/Kae-Strange-Resume.pdf" target="_blank">Resume</a>
+            <a href="aboutMe.html">About Me</a>
         </div>
     </div>
 </footer>
