--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             position: relative;
             background-color: #28a745;
             color: white;
-            border-radius: 8px;
+            border-radius: 100%;
             width: 20%;
             height: 0;
             padding-bottom: 20%;  /* Maintain square shape */
@@ -119,6 +119,12 @@
             object-fit: cover;
             cursor: pointer;
         }
+
+	.interest-box:hover {
+	    background-image: None;
+            background-color: #0056b3;
+        }
+
 
 	/* Portfolio Section */
         .portfolio {
@@ -183,7 +189,7 @@
 
         .portfolio-item2 .description {
             width: 45%;
-            text-align: right;
+            text-align: left;
             padding-right: 20px;
         }
 
@@ -221,14 +227,16 @@
             justify-content: center;
             margin-top: 20px;
 	    padding-bottom: 30px;
+	    
         }
         .news-box {
             width: 30%;
             border: 1px solid #ccc;
             border-radius: 10px;
             overflow: hidden;
-            text-align: center;
+            text-align: left;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+	    background: white;
         }
         .news-box img {
             width: 100%;
@@ -286,17 +294,17 @@
 
 <div class="interests" id="interests">
     <div class="interest-box">
-        <a href="interest1-link.html">
+        <a href="#interest1-link.html">
             <img src="image.png" alt="Interest 1">
         </a>
     </div>
     <div class="interest-box">
-        <a href="interest2-link.html">
+        <a href="#interest2-link.html">
             <img src="image.png" alt="Interest 2">
         </a>
     </div>
     <div class="interest-box">
-        <a href="interest3-link.html">
+        <a href="#interest3-link.html">
             <img src="image.png" alt="Interest 3">
         </a>
     </div>
@@ -308,21 +316,25 @@
         <div class="description">
             <h2>Color Radius</h2>
             <p>Color Radius is single player strategy game, if you cant win at chess and tic tac toe's too easy try the fun for all ages Color Radius</p>
+            <a href="https://github.com/K3nn8DN/Color-Radius">
             <button>View Project</button>
+	    </a>
         </div>
         <div class="image">
-            <img src="image.png" alt="Project 1">
+            <img src="images/colorRadius.png" alt="Project 1">
         </div>
     </div>
 
     <div class="portfolio-item2">
 	<div class="image" >
-            <img src="image.png" alt="Project 2">
+            <img src="images/swish.png" alt="Project 2">
         </div>
         <div class="description"">
-            <h2>Project 2</h2>
-            <p>This is another project I worked on. It focuses on data analysis and involves various statistical models.</p>
+            <h2>Swish</h2>
+            <p>This is my oldest game made in unity and based off flappy bird and basketball. Who says good projects cant be from before college.</p>
+	    <a href="https://github.com/K3nn8DN/Swish">
             <button>View Project</button>
+	    </a>
         </div>
 	
     </div>
@@ -333,14 +345,14 @@
             <img src="image.png" alt="News Image">
             <div class="news-text">
 		<h1>Current Project News:</h1>
-		<p>Im currently working on a Spring Database<p1>
+		<h3>Im currently working on a Spring Database</h3>
 	    </div>
         </div>
         <div class="news-box">
             <img src="image.png" alt="News Image">
             <div class="news-text">
 		<h1>Latest Update:</h1>
-		<p>Website coming Soon as you may see</p>
+		<h3>Website coming Soon as you see: pictures may change</h3>
 	    </div>
         </div>
     </div>
