--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             align-items: center;
             width: 100%;
             margin: 0 auto;
+
         }
 
         .interest-box {
@@ -128,8 +129,10 @@
 
 	/* Portfolio Section */
         .portfolio {
-            padding: 40px 20px;
+	    padding-bottom:5%;
+	    padding-top:5%;
             text-align: center;
+	    width:100%;
         }
 
         .portfolio-item {
@@ -140,6 +143,7 @@
             width: 100%;
             max-width: 1000px;
             margin: 0 auto;
+	    padding-bottom: 5%;
         }
 
         .portfolio-item .description {
