update icons and pictures
update icons pictures and about me

--- a/index.html
+++ b/index.html
@@ -299,17 +299,17 @@
 <div class="interests" id="interests">
     <div class="interest-box">
         <a href="#interest1-link.html">
-            <img src="image.png" alt="Interest 1">
+            <img src="images/GameIcon.png" alt="Interest 1">
         </a>
     </div>
     <div class="interest-box">
         <a href="#interest2-link.html">
-            <img src="image.png" alt="Interest 2">
+            <img src="images/techIcon2.png" alt="Interest 2">
         </a>
     </div>
     <div class="interest-box">
         <a href="#interest3-link.html">
-            <img src="image.png" alt="Interest 3">
+            <img src="images/otherIcon2.png" alt="Interest 3">
         </a>
     </div>
 </div>
@@ -346,14 +346,14 @@
 
 <div class="news-container">
         <div class="news-box">
-            <img src="image.png" alt="News Image">
+            <img src="images/databaseIcon.png" alt="News Image">
             <div class="news-text">
 		<h1>Current Project News:</h1>
 		<h3>Im currently working on a Spring Database</h3>
 	    </div>
         </div>
         <div class="news-box">
-            <img src="image.png" alt="News Image">
+            <img src="images/websiteIcon.png" alt="News Image">
             <div class="news-text">
 		<h1>Latest Update:</h1>
 		<h3>Website coming Soon as you see: pictures may change</h3>
