--- a/aboutMe.html
+++ b/aboutMe.html
@@ -39,7 +39,7 @@
         /* Header */
         header {
             text-align: center;
-            color: white;
+            color: black;
 	    padding:0;
             background-image: url('image.png'); 
             background-size: cover;
@@ -55,7 +55,7 @@
         }
 
         header h1 {
-	    padding-top:30px;
+	    padding-top:5%;
             font-size: 4em; 
             margin: 0;
         }
@@ -114,18 +114,18 @@
         }
 
         .about .description {
-            width: 55%;
+            width: 80%;
             text-align: left;
             padding-right: 20px;
         }
 
         .about .image {
-            width: 45%;
+            width: 40%;
             text-align: left;
         }
 
         .about img {
-            width: 50%;
+            width: 80%;
             height: auto;
             max-width: 300px;
             border-radius: 8px;
@@ -150,7 +150,7 @@
             grid-template-columns: repeat(2, 1fr);
             width: 80%;
 	    padding: 5% 10%;
-	    padding-top:20%;
+	    padding-top:15%;
             border-radius: 10px;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 	    
@@ -204,11 +204,13 @@
 
 <div class="about">
 	<div class="image" >
-            <img src="images/swish.png" alt="Project 2">
+            <img src="images/picture.png" alt="Project 2">
         </div>
         <div class="description"">
             <h2>About Me</h2>
-            <p>This is the about me page more to come soon </p>
+            <p>I'm Kae Strange, a Computer Science major at Northeastern University, concentrating in AI with a minor in Game Design. I’m originally from Texas, and I’ve always loved figuring out how things work—whether that’s technology, games, or anything else. I’m drawn to innovation, not just in coding but in ideas, design, and problem-solving.</p>
+
+<p>Outside of programming, I’m a big fan of action anime, fast-paced stories, and anything that sparks creativity. I like exploring different ways to bring ideas to life, whether through digital projects or just learning something new.</p>
         </div>
 </div>
 
@@ -260,7 +262,7 @@
     <div class="right-section">
         <div class="links">
 	    <a href="portfolio.html" target="_blank">Portfolio</a>
-            <a href="www.linkedin.com/in/kaestrange" target="_blank">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/kaestrange" target="_blank">LinkedIn</a>
             <a href="https://github.com/K3nn8DN" target="_blank">GitHub</a>
             <a href="images/Kae-Strange-Resume.pdf" target="_blank">Resume</a>
             <a href="aboutMe.html">About Me</a>
