fix link for GitHub button

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
     <img src="image.png" alt="Kae Strange"> 
     <h1>Welcome!</h1>
     <p>Glade you stopped by</p>
-    <a href="aboutMe.html">
+    <a href="https://github.com/K3nn8DN">
     <button>My GitHub</button>
     </a>
    
