--- a/index.html
+++ b/index.html
@@ -271,6 +271,11 @@
         .links a:hover {
             text-decoration: underline;
         }
+	
+	h1, h3{
+	    padding: 0 20%;
+	    
+	}
 
     </style>
 </head>
@@ -295,7 +300,8 @@
    
 
 </header>
-
+<h1>Top Intrests</h1>
+<h3>a longer bichbineocnzlebfhneioun paragraph ifnirebfisbivbeareibv and stuff</h3>
 <div class="interests" id="interests">
     <div class="interest-box">
         <a href="#interest1-link.html">
@@ -344,6 +350,7 @@
     </div>
 </div>
 
+<h1>Latest News</h1>
 <div class="news-container">
         <div class="news-box">
             <img src="images/databaseIcon.png" alt="News Image">
