--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
         /* Header */
         header {
             text-align: center;
-            color: white;
+            color: black;
 	    padding:0;
             background-image: url('image.png'); 
             background-size: cover;
@@ -55,7 +55,7 @@
         }
 
         header h1 {
-	    padding-top:30px;
+	    padding-top:5%;
             font-size: 4em; 
             margin: 0;
         }
@@ -149,6 +149,7 @@
             cursor: pointer;
             margin-top: 10px;
 	    width: 10%;
+	    border-radius: 3px;
 	}
 
 	.buttons button:hover {
@@ -175,13 +176,13 @@
 </nav>
 
 <header> 
-    <h1>Welcome!</h1>
+    <h1>Portfolio</h1>
     <p>Glade you stopped by</p>
 
 </header>
 
 <div class="buttons">
-<button>ALL</button> <button>ALL</button>  <button>ALL</button> <button>ALL</button>
+<button>ALL</button> <button>PROGRAMMING</button>  <button>GAME DESIGN</button> <button>OTHER</button>
 </div>
 <div class="grid-container">
         <div class="grid-item">
