--- a/index.html
+++ b/index.html
@@ -300,8 +300,8 @@
    
 
 </header>
-<h1>Top Intrests</h1>
-<h3>a longer bichbineocnzlebfhneioun paragraph ifnirebfisbivbeareibv and stuff</h3>
+<h1>Top Skills</h1>
+<h3>My top skills are in programming and Game design in the future the bubbles will have information in them for now they do nothing</h3>
 <div class="interests" id="interests">
     <div class="interest-box">
         <a href="#interest1-link.html">
