--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 <header>
     <img src="image.png" alt="Kae Strange"> 
     <h1>Welcome!</h1>
-    <p>Glade you stopped by</p>
+    <p>Glad you stopped by</p>
     <a href="https://github.com/K3nn8DN">
     <button>My GitHub</button>
     </a>
