--- a/aboutMe.html
+++ b/aboutMe.html
@@ -210,7 +210,7 @@
 
 <div class="about">
 	<div class="image" >
-            <img src="images/picture.png" alt="Project 2">
+            <img src="images/photo.png" alt="photo">
         </div>
         <div class="description"">
             <h2>About Me</h2>
