--- a/portfolio.html
+++ b/portfolio.html
@@ -232,7 +232,7 @@
     <div class="right-section">
         <div class="links">
 	    <a href="portfolio.html" target="_blank">Portfolio</a>
-            <a href="www.linkedin.com/in/kaestrange" target="_blank">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/kaestrange" target="_blank">LinkedIn</a>
             <a href="https://github.com/K3nn8DN" target="_blank">GitHub</a>
             <a href="images/Kae-Strange-Resume.pdf" target="_blank">Resume</a>
             <a href="aboutMe.html">About Me</a>
