--- a/aboutMe.html
+++ b/aboutMe.html
@@ -198,7 +198,7 @@
 <nav>
     <a href="index.html"><div class="website-name" style="font-size: 2em;">Kae Strange</div></a> 
     <div class="nav-links">
-        <a href="portfolio.html">Portfolio</a>
+        <a href="portfolio/portfolio.html">Portfolio</a>
         <a>About Me</a>
     </div>
 </nav>
@@ -215,9 +215,9 @@
         </div>
         <div class="description"">
             <h2>About Me</h2>
-            <p>I'm Kae Strange, a Computer Science major at Northeastern University, concentrating in AI with a minor in Game Design. I’m originally from Texas, and I’ve always loved figuring out how things work—whether that’s technology, games, or anything else. I’m drawn to innovation, not just in coding but in ideas, design, and problem-solving.</p>
+		<p>I'm Kae Strange, a Computer Science major at Northeastern University, concentrating in AI with a minor in Game Design. 		I’m originally from Texas, and I’ve always loved figuring out how things work—whether that’s technology, games, or 			anything else. I’m drawn to innovation, not just in coding but in ideas, design, and problem-solving.</p>
 
-<p>Outside of programming, I’m a big fan of action anime, fast-paced stories, and anything that sparks creativity. I like exploring different ways to bring ideas to life, whether through digital projects or just learning something new.</p>
+		<p>Outside of programming, I’m a big fan of action anime, fast-paced stories, and anything that sparks creativity. I like 		exploring different ways to bring ideas to life, whether through digital projects or just learning something new.</p>
         </div>
 </div>
 
@@ -269,7 +269,7 @@
 
     <div class="right-section">
         <div class="links">
-	    <a href="portfolio.html" target="_blank">Portfolio</a>
+	    <a href="portfolio/portfolio.html" target="_blank">Portfolio</a>
             <a href="https://www.linkedin.com/in/kaestrange" target="_blank">LinkedIn</a>
             <a href="https://github.com/K3nn8DN" target="_blank">GitHub</a>
             <a href="images/Kae-Strange-Resume.pdf" target="_blank">Resume</a>
