--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -170,12 +170,13 @@
 <body>
 <!-- Navigation Bar -->
 <nav>
-    <a href="index.html"><div class="website-name" style="font-size: 1.5em;">Kae Website</div></a>
+    <a href="../index.html"><div class="website-name" style="font-size: 2em;">Kae Strange</div></a> 
     <div class="nav-links">
         <a>Portfolio</a>
-        <a href="aboutMe.html">About Me</a>
+        <a href="../aboutMe.html">About Me</a>
     </div>
 </nav>
+
 
 <header> 
     <h1>Portfolio</h1>
@@ -235,8 +236,8 @@
 	    <a href="portfolio.html" target="_blank">Portfolio</a>
             <a href="https://www.linkedin.com/in/kaestrange" target="_blank">LinkedIn</a>
             <a href="https://github.com/K3nn8DN" target="_blank">GitHub</a>
-            <a href="images/Kae-Strange-Resume.pdf" target="_blank">Resume</a>
-            <a href="aboutMe.html">About Me</a>
+            <a href="../images/Kae-Strange-Resume.pdf" target="_blank">Resume</a>
+            <a href="../aboutMe.html">About Me</a>
         </div>
     </div>
 </footer>
